Added multiple environments

--- a/PASCAL/platformio.ini
+++ b/PASCAL/platformio.ini
@@ -1,14 +1,18 @@
-; PlatformIO Project Configuration File
+; ******************************************INSTRUCTIONS*****************************************
 ;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
+;	To build all environments and test for errors, you can press the check mark or run `pio run`
+;	
+;	To upload the frr code, run `pio run -e frr -t upload`
 ;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
+;	To upload the flight code, you can do a few things:
+;		1. Run 'pio run -e flight -t upload', which is the fastest
+;		2. Press the upload button, though it is slower because it uploads the frr code first
+;		   wipes it, and then uploads flight code
+;		3. Run `pio run -t upload`, which is slow in the same way as 2
+;
+;************************************************************************************************
 
-[env:pico]
+[env]
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = pico
 framework = arduino
@@ -19,3 +23,21 @@ lib_deps =
 	adafruit/Adafruit BMP3XX Library@^2.1.6
 	adafruit/Adafruit HDC302x@^1.0.3
 	wollewald/ADS1115_WE@^1.5.4
+; Include all files except .cpp files that end in _code
+build_src_filter =
+	+<*>
+	-<*_code.cpp>
+
+[env:frr]
+; Inherit the general files and add outreach_code.cpp
+build_src_filter =
+	${env.build_src_filter}
+    +<FRR_code.cpp>
+
+; This environment needs to be the lowest to be the default
+[env:flight]
+; Inherit the general files and add flight_code.cpp
+build_src_filter =
+	${env.build_src_filter}
+    +<Flight_code.cpp>
+
