Last updates (didn't push last time)

--- a/PASCAL/platformio.ini
+++ b/PASCAL/platformio.ini
@@ -3,7 +3,7 @@
 ;	To build all environments and test for errors, you can press the check mark or run `pio run`
 ;	
 ;	To upload the frr code, run `pio run -e frr -t upload`
-; 	To upload the test code, run `pio run -e test -t upload`
+	; 	To upload the test code, run `pio run -e tIest -t upload`
 ;
 ;	To upload the flight code, you can do a few things:
 ;		1. Run 'pio run -e flight -t upload', which is the fastest
