Updated instructions for linux users

--- a/PASCAL/platformio.ini
+++ b/PASCAL/platformio.ini
@@ -11,6 +11,12 @@
 ;		   wipes it, and then uploads flight code
 ;		3. Run `pio run -t upload`, which is slow in the same way as 2
 ;
+;
+;   Linux users will need to update udev rules before PIO will work. Simply run
+;       `curl -fsSL https://raw.githubusercontent.com/platformio/platformio-core/develop/platformio/assets/system/99-platformio-udev.rules | sudo tee /etc/udev/rules.d/99-platformio-udev.rules`
+; 		Then run `sudo service udev restart`
+;		You only need to do this once :D
+;
 ;************************************************************************************************
 
 [env]
